--- a/index.html
+++ b/index.html
@@ -197,86 +197,219 @@
                     <h2 class="h2-heading">Popular Courses Offered</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
+
+            <!-- Cards -->
+            <div class="ex-cards-1 pt-3 pb-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">1</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>SAP Courses</h5>
+                                            <p>Human Capital Management (HCM), Identity Management (IDM), Cloud For Customer (C4C)</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">2</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Progress DB</h5>
+                                            <!-- <p>Statistics numbers for important values, card slider for testimonials, image slider for customer logos</p> -->
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">3</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Filenet Content Manager – Build Filenet Content Repository</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">4</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Netcool Omnibus (Administration & Maintenance</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">5</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Microsoft</h5>
+                                            <p> Azure 300, Azure 203, SQL Server</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">6</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Certified Cloud Security Professional(CCSP)</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">7</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Content Navigator</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">8</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Tivoli Network Manager (ITNM)</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">9</span>
+                                        </span>
+                                        <div class="media-body">
+                                             <h5>Juniper Security (JSEC)</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">10</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>IBM Courses</h5>
+                                            <p>Manager – Introduction, Filenet Content</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">11</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Tivoli Storage Management (TSM)</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                            <!-- Card -->
+                            <div class="card">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <span class="fa-stack">
+                                            <span class="fas fa-circle fa-stack-2x"></span>
+                                            <span class="fa-stack-1x">12</span>
+                                        </span>
+                                        <div class="media-body">
+                                            <h5>Application Performance Management (APM)</h5>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of card -->
+                            <!-- end of card -->
+
+                        </div> <!-- end of col -->   
+                    </div> <!-- end of row -->   
+                </div> <!-- end of container -->   
+            </div> <!-- end of ex-cards-1 -->
+            <!-- end of cards -->
+
             <div class="row">
                 <div class="col-lg-12">
-                    
-                    <!-- Service -->
-                    <div class="service-container">
-                        <div class="service-wrapper">
-                            <img src="images/service-icon-1.svg" alt="alternative">
-                            <div class="service-details">
-                                <h5>List Building</h5>
-                                <p>It's very easy to start creating email lists for your marketing actions, give it a try</p>
-                            </div> <!-- end of service-details -->
-                        </div> <!-- end of service-wrapper -->
-                    </div> <!-- end of service-container -->
-                    <!-- end of service -->
-
-                    <!-- Service -->
-                    <div class="service-container">
-                        <div class="service-wrapper">
-                            <img src="images/service-icon-2.svg" alt="alternative">
-                            <div class="service-details">
-                                <h5>Campaign Tracker</h5>
-                                <p>Campaigns is a feature we've created since the beginning and it's at the core of Lomar</p>
-                            </div> <!-- end of service-details -->
-                        </div> <!-- end of service-wrapper -->
-                    </div> <!-- end of service-container -->
-                    <!-- end of service -->
-
-                    <!-- Service -->
-                    <div class="service-container">
-                        <div class="service-wrapper">
-                            <img src="images/service-icon-3.svg" alt="alternative">
-                            <div class="service-details">
-                                <h5>Analytics Tool</h5>
-                                <p>Lomar collects all the necessary data in order to help you analyse different situations</p>
-                            </div> <!-- end of service-details -->
-                        </div> <!-- end of service-wrapper -->
-                    </div> <!-- end of service-container -->
-                    <!-- end of service -->
-
-                    <!-- Service -->
-                    <div class="service-container">
-                        <div class="service-wrapper">
-                            <img src="images/service-icon-4.svg" alt="alternative">
-                            <div class="service-details">
-                                <h5>Admin Control</h5>
-                                <p>Rights of users and admins can easily be managed through the app's integrated control panel</p>
-                            </div> <!-- end of service-details -->
-                        </div> <!-- end of service-wrapper -->
-                    </div> <!-- end of service-container -->
-                    <!-- end of service -->
-
-                    <!-- Service -->
-                    <div class="service-container">
-                        <div class="service-wrapper">
-                            <img src="images/service-icon-5.svg" alt="alternative">
-                            <div class="service-details">
-                                <h5>Integration Setup</h5>
-                                <p>We're providing a step-by-step integration session to implement automation in your current flow</p>
-                            </div> <!-- end of service-details -->
-                        </div> <!-- end of service-wrapper -->
-                    </div> <!-- end of service-container -->
-                    <!-- end of service -->
-
-                    <!-- Service -->
-                    <div class="service-container">
-                        <div class="service-wrapper">
-                            <img src="images/service-icon-6.svg" alt="alternative">
-                            <div class="service-details">
-                                <h5>Help Line Support</h5>
-                                <p>Quality support is our top priority so please contact us for any problem you encounter</p>
-                            </div> <!-- end of service-details -->
-                        </div> <!-- end of service-wrapper -->
-                    </div> <!-- end of service-container -->
-                    <!-- end of service -->
-
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="p-large">Our marketing automation services will take your company to the next level. <a class="blue no-line" href="#contact"><strong>Contact us</strong></a> today for a quote</p>
+                    <p class="p-large">Our experts will take your company to the next level. <a class="blue no-line" href="#contact"><strong>Contact us</strong></a> today for a quote</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
