--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
     <header id="header" class="header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-xl-7">
-                    <h1 class="h1-large">Training & Staffing Solutions</h1>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10">
+                    <h1 class="h1-large blue">Training & Staffing Solutions</h1>
+                    <p class="description">Established in the year 2019 in India, New Clue Consultants is an IT Training Organization, focused on up- skilling corporate workforce through tailor-made training needs. Our Vision is to provide the most relevant and work-related training that are aligned with company's objectives, goals & strategies.</p>
                 </div> <!-- end of col -->
+                <div class="col-lg-1"></div>
             </div> <!-- end of row -->
             <div class="row">
                 <div class="col-lg-12">
@@ -194,7 +197,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">COURSES OFFERED</div>
-                    <h2 class="h2-heading">Popular Courses Offered</h2>
+                    <h2 class="h2-heading">Trainings Conducted In Past</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
 
