--- a/case_study_2.html
+++ b/case_study_2.html
@@ -120,7 +120,7 @@
                     <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">TKoenig Solutions is the leading education group in India since 1993</div>
+                            <div class="media-body">Koenig Solutions is the leading education group in India since 1993</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
@@ -133,7 +133,7 @@
                     </ul>
                     
                     <h2 class="mb-3">Key Highlights of the Engagement</h2>
-                    <p>TNew Clue is one of their vendors to provide external Trainers for the courses which are not a part of their regular programs for both Domestic and International clients 
+                    <p>New Clue is one of their vendors to provide external Trainers for the courses which are not a part of their regular programs for both Domestic and International clients 
                      </p>
 
                     <div class="text-box mb-5">
