--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="section-title">COURSES OFFERED</div>
                     <h2 class="h2-heading">Trainings Conducted In Past</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -460,6 +459,7 @@
     <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
     <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
     <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="js/load_courses.js"></script> <!-- Custom scripts -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
 </body>
 </html>
