--- a/case_study_4.html
+++ b/case_study_4.html
@@ -198,7 +198,7 @@
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
-                        <p class="p-small">We would love to hear from you <a href="mailto:tanvi@newclue.in "><strong>tanvi@newclue.in</strong></a></p>
+                        <p class="p-small">We would love to hear from you <a href="mailto:tanvi@newclue.co.in "><strong>tanvi@newclue.co.in</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
