--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 <i class="fas fa-envelope fa-stack-1x"></i>
                             </a>
                         </span>
-                        <a class="blue no-line" href="mailto:tanvi@newclue.in"><strong>tanvi@newclue.in</strong></a>
+                        <a class="blue no-line" href="mailto:tanvi@newclue.co.in"><strong>tanvi@newclue.co.in</strong></a>
                     </span>
                     <span class="icon-with-text">
                         <span class="fa-stack">
@@ -430,7 +430,7 @@
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
-                        <p class="p-small">We would love to hear from you <a href="mailto:tanvi@newclue.in "><strong>tanvi@newclue.in</strong></a></p>
+                        <p class="p-small">We would love to hear from you <a href="mailto:tanvi@newclue.co.in "><strong>tanvi@newclue.co.in</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
