--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li class="nav-item">
                         <!-- <a class="nav-link page-scroll" href="#details">Methodology</a> -->
                     </li>
-                    <li class="nav-item dropdown">
+                   <!--  <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="case_study_1.html">L&T Infotech</a>
@@ -73,7 +73,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="case_study_4.html">Ezy Corporation, Singapore</a>
                         </div>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
